Add favorite list table to show user favorite books
