# book-network-ui/src/app/services/models.ts
@@ -6,9 +6,11 @@ export { AuthResponse } from './models/auth-response';
 export { BookRequest } from './models/book-request';
 export { BookResponse } from './models/book-response';
 export { BookTransactionResponse } from './models/book-transaction-response';
+export { FavoriteResponse } from './models/favorite-response';
 export { FeedBackCommentUpdateRequest } from './models/feed-back-comment-update-request';
 export { FeedbackRequest } from './models/feedback-request';
 export { FeedbackResponse } from './models/feedback-response';
 export { PageResponseBookResponse } from './models/page-response-book-response';
 export { PageResponseBookTransactionResponse } from './models/page-response-book-transaction-response';
+export { PageResponseFavoriteResponse } from './models/page-response-favorite-response';
 export { PageResponseFeedbackResponse } from './models/page-response-feedback-response';
