# book-network-ui/src/app/services/models/favorite-response.ts
@@ -1,0 +1,12 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface FavoriteResponse {
+  author?: string;
+  bookId?: number;
+  coverImage?: Array<string>;
+  id?: number;
+  isbn?: string;
+  owner?: string;
+  rate?: number;
+  title?: string;
+}
